--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Svelte + TS + Vite App</title>
+  <title>Svelte Todo App</title>
   <style>
-
+    body {
+      background: #262730;
+      color: #fafafa;
+    }
   </style>
 </head>
 
