--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <title>Svelte Todo App</title>
   <style>
     body {
-      background: #262730;
+      background: #1f1d2b;
       color: #fafafa;
     }
   </style>
